# src/routes/categories.routes.ts
@@ -1,27 +1,25 @@
 import { Router } from "express";
 import multer from "multer";
 
-import createCategoryController from "../useCases/createCategory";
-import importCategoryController from "../useCases/importCategory";
-import listCategoriesController from "../useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 const upload = multer({ dest: "./tmp" });
 
-categoriesRoutes.post("/", async (request, response) => {
-  return createCategoryController().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.get("/", async (request, response) => {
-  return listCategoriesController().handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
+
+categoriesRoutes.get("/", listCategoriesController.handle);
 
 categoriesRoutes.post(
   "/import",
   upload.single("file"),
-  async (request, response) => {
-    return importCategoryController().handle(request, response);
-  }
+  importCategoryController.handle
 );
 
 export { categoriesRoutes };
